--- a/data/menu.yml
+++ b/data/menu.yml
@@ -1,6 +1,6 @@
-- title: First
+- title: First Menuitem
   link: "first.html"
-- title: Second
+- title: Second Menuitem
   link: "second.html"
-- title: Third
+- title: Third and Last Menuitem
   link: "third.html"
